fix geonode logic for geoserver, currently tagged as kartoza/geoserver:geonode-2.23.1.x